<resources>
    <string name="app_name">エーサポ</string>
    <string name="press_start">PRESS START</string>
    <string name="menu">メニュー</string>
    <string name="card_list">カード一覧</string>
    <string name="agent">ｴｰｼﾞｪﾝﾄ</string>
    <string name="sub_agent">サブ</string>
    <string name="strategy">諜略</string>
    <string name="agent_open">公開状況</string>
    <string name="reset">全リセット</string>
    <string name="pop_select">選択</string>
    <string name="pop_detail">詳細</string>
    <string name="pop_cancel">キャンセル</string>
    <string name="search">フィルター</string>
    <string name="agentpackage">収録</string>
    <string name="def">既存</string>
    <string name="aug">拡張</string>
    <string name="gender">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="none">なし</string>
    <string name="agentattribute">属性</string>
    <string name="attrsecret">ｼｰｸﾚｯﾄ</string>
    <string name="attrpublic">ﾊﾟﾌﾞﾘｯｸ</string>
    <string name="attrnormal">ノーマル</string>
    <string name="unlock">選択解除</string>
    <string name="pepper_iden">ペッパー識別</string>
    <string name="iden_success">識別成功</string>
    <string name="minus1">１体減らす</string>
    <string name="voice">音声</string>
    <string name="kiyoi">清い</string>
    <string name="juntaku">潤沢</string>
    <string name="onepoint">１ポイント</string>
    <string name="sibui">渋い</string>
    <string name="nice">ナイスゥ</string>
    <string name="reach">リーチ</string>
    <string name="imnot">私は違う</string>
    <string name="kyohi">拒否</string>
    <string name="gokuhi">極秘</string>
    <string name="sinten">親展</string>
    <string name="koukai">公開</string>
    <string name="syomei">証明</string>
    <string name="hosoku">捕捉</string>
    <string name="godou">誤導</string>
    <string name="point">ポイント状況</string>
    <string name="add">追加</string>
    <string name="zeropoint">０点</string>
    <string name="copy">コピー</string>
    <string name="send">送信</string>
    <string name="synchro">同期</string>
    <string name="delete">削除</string>
    <string name="back">一旦帰る</string>
</resources>
