<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#202020">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:text="@string/search"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorSilver"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/agentpackage"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/def"
                        android:id="@+id/buttonPackage0"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/aug"
                        android:id="@+id/buttonPackage1"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlock"
                        android:id="@+id/buttonPackage2"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/male"
                        android:id="@+id/buttonGender0"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/female"
                        android:id="@+id/buttonGender1"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/none"
                        android:id="@+id/buttonGender2"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlock"
                        android:id="@+id/buttonGender3"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/agentattribute"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/attrsecret"
                        android:id="@+id/buttonAttr0"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/attrpublic"
                        android:id="@+id/buttonAttr1"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/attrnormal"
                        android:id="@+id/buttonAttr2"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlock"
                        android:id="@+id/buttonAttr3"
                        android:background="@drawable/button_state"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="OK"
                android:id="@+id/buttonOK"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pop_cancel"
                android:id="@+id/buttonCancel"/>


        </LinearLayout>

    </LinearLayout>


</FrameLayout>